--- a/style.css
+++ b/style.css
@@ -256,7 +256,7 @@ color: transparent;
 .heading{
   text-align: center;
   font-size: 7rem;
-  margin: 5rem 0;
+  margin-bottom: 4rem;
 }
 
 .services{
