--- a/style.css
+++ b/style.css
@@ -560,6 +560,7 @@ input[type="number"] {
   }
   .about h2{
     text-align: center;
+    font-size: 6rem;
     margin: 1rem 0;
   }
   .about img{
