--- a/style.css
+++ b/style.css
@@ -586,6 +586,7 @@ input[type="number"] {
 }
 
 
+
 .fixed-width {
   display: inline-block;
   width: 18ch; /* Reserves space for "Software Developer" */
@@ -598,6 +599,11 @@ input[type="number"] {
 #typewriter-text::after {
   content: '|';
   animation: blink 2s infinite;
+}
+
+@keyframes blink {
+  0%, 100% { opacity: 1; }
+  50% { opacity: 0; }
 }
 
 @keyframes blink {
