--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ section{
 .home-content{
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: flex-start;
   text-align: left;
 }
 .home-content h1{
