--- a/style.css
+++ b/style.css
@@ -581,7 +581,7 @@ input[type="number"] {
   }
   .about h2{
     text-align: center;
-    font-size: 6rem;
+    font-size: 37px;
     margin: 1rem 0;
   }
   .about img{
