--- a/style.css
+++ b/style.css
@@ -587,7 +587,11 @@ input[type="number"] {
   .about img{
     width: 80vw;
   }
-
+  
+  .section-heading{
+     font-size : 37px;
+  }
+  
   .projects h2{
     margin-top : 1rem;
     font-size : 37px;
